--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                 <b>Temperature</b>
             </div>
             <div class="r_4">
-                <p>{{temperature}}</p>
+                <p>{{temperature}} °c</p>
             </div>
         </div>
         <div class="r_2">
@@ -57,7 +57,7 @@
                 <b>Humidity</b>
             </div>
             <div class="r_4">
-                <p>{{humidity}}</p>
+                <p>{{humidity}} %</p>
             </div>
         </div>
         <div class="r_2">
@@ -68,7 +68,7 @@
                 <b>Wind speed</b>
             </div>
             <div class="r_4">
-                <p>{{wind}}</p>
+                <p>{{wind}} km/h</p>
             </div>
         </div>
         <div class="r_2">
@@ -90,7 +90,7 @@
                 <b>Pressure</b>
             </div>
             <div class="r_4">
-                <p>{{pressure}}</p>
+                <p>{{pressure}} hPa</p>
             </div>
         </div>
         <div class="r_2 n_1">
